arregle algunas cosas de ul

--- a/index.html
+++ b/index.html
@@ -81,22 +81,25 @@
 
         <!-- Servicios -->
 
-        <div class="separar">
+        <div class="separar separarUl">
             <h2 class="mt-4 mb-4" id="servicios"> <b><u>Servicios</b></u></h2>
 
-            <div class="centrarServicios">
+            <div class="listaQuienesSomos">
                 <ul>
-                <li> <img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Realizamos traslados de mercadería a empresas y particulares</li>
-                <li><img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Mudanzas</li>
-                <li><img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Viajes al interior</li>
-                <li><img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Contamos con ayudantes</li>
-                <li><img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Lingas con criket, esquineros plasticos y mantas protectoras</li>
-            </ul>
+                    <li> <img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Realizamos traslados de
+                        mercadería a empresas y particulares</li>
+                    <li><img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Mudanzas</li>
+                    <li><img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Viajes al interior</li>
+                    <li><img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Contamos con ayudantes</li>
+                    <li><img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Lingas con criket,
+                        esquineros plasticos y mantas protectoras</li>
+                </ul>
             </div>
-                <p> <b>De estas forma porder brindar un mejor servicio y dar el máximo cuidado a la mercadería transportada</b>
-                </p>
-            
-            
+            <p> <b>De estas forma porder brindar un mejor servicio y dar el máximo cuidado a la mercadería
+                    transportada</b>
+            </p>
+
+
         </div>
 
 
@@ -135,16 +138,17 @@
 
     <!-- Quienes somos -->
 
-    <div class="separar">
+    <div class="separar separarUl">
         <h3 class="mt-4 mb-4" id="quienesSomos"><b><u>¿Quiénes Somos?</u></b></h3>
 
         <p>Somos una Empresa familiar, con más de 10 años de trayectoria.</p>
         <p>Nuestra Misión nos enfoca y dirige todas nuestras acciones con un objetivo claro:</p>
         <div class="listaQuienesSomos">
             <ul>
-                <li>Satisfacción al cliente, prioridad Nº1</li>
-                <li>El mejor trato y atención.</li>
-                <li>Cuidado y responsabilidad</li>
+                <li><img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Satisfacción al cliente,
+                    prioridad Nº1</li>
+                <li><img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">El mejor trato y atención.</li>
+                <li><img src="img/arocoiris.png" alt="imagen arcoiris" class="arcoiris">Cuidado y responsabilidad</li>
             </ul>
         </div>
     </div>
@@ -152,7 +156,7 @@
 
     </div>
 
-    <!-- cointactos -->
+    <!-- contactos -->
 
     <div class="separar">
         <h3 class="mt-4 mb-4" id="contacto"><b><u>Contactos</u></b></h3>
